# guppy-furnace

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
contract/: Cargo.toml
contract/src/: contract.rs  error.rs  helpers.rs  lib.rs  mock_querier.rs  msg.rs  multitest.rs  state.rs  test.rs
local-migaloo/: Dockerfile  README.md  config.sh  download_wasm.sh  entrypoint.sh
public/: chihuahua-mainnet-config.json  config.json  mainnet-config.json
scripts/: build_migaloo_container.sh  burn_multiple_accounts.sh  migaloo.sh  optimize.sh  start_local.sh  upload_to_local.sh  upload_to_local_in_compose.sh
src/components/burner/: BurnForm.tsx  BurnInput.tsx  BurnPage.tsx  EllipticalShadow.tsx  SuccessDetails.tsx
src/components/connect/: ConnectButton.tsx  ConnectModal.tsx
src/components/leaderboard/: DetailsDisplay.tsx  DetailsField.tsx  PageSelect.tsx  RankingSection.tsx  RankingTable.tsx
src/components/navbar/: Navbar.tsx  (+1 more)
src/hooks/: queryClient.ts  useAshBalance.tsx  useConfig.tsx  useCosmwasmClient.ts  useGetAllSortedEntries.ts  useKeplrInterface.tsx  usePaginatedLeaderboardData.tsx  useTerraStation.tsx  useTotalWhaleBurned.tsx  useUserRank.tsx  useWhaleBalance.tsx  useWhaleBurned.tsx  useWhaleSupply.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/theme/: alert.ts  button.ts  divider.ts  index.ts  modal.ts  table.ts
src/types/: leaderboard-data.ts  wallet-client.ts  windows.d.ts
src/utils/: truncateAddress.ts
subql/: package.json  project.yaml  schema.graphql
(+6 files in other folders)
